--- a/LOC/MVVM/Views/AutoView.xaml
+++ b/LOC/MVVM/Views/AutoView.xaml
@@ -3,11 +3,47 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:logging="clr-namespace:TopCom.LOG;assembly=TopCom"
+             xmlns:controls="clr-namespace:TopUI.Controls;assembly=TopUI"
+             xmlns:UIDefine="clr-namespace:TopUI.Define;assembly=TopUI"
              xmlns:local="clr-namespace:LOC.MVVM.Views"
              xmlns:ViewModel="clr-namespace:LOC.MVVM.ViewModels"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance Type= ViewModel:AutoViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="Button"
+               BasedOn="{StaticResource {x:Type Button}}">
+            
+            <Setter Property="RenderTransformOrigin"
+                            Value="0.5, 0.5"/>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
+                                BorderThickness="1"
+                                BorderBrush="LightGray">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsPressed"
+                         Value="True">
+                    <Setter Property="RenderTransform">
+                        <Setter.Value>
+                            <ScaleTransform ScaleX="0.98"
+                                            ScaleY="0.98"/>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -21,11 +57,68 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
+        <ContentControl Content="{Binding WorkDataVM}"
+                        Grid.ColumnSpan="2"/>
         <ContentControl Content="{Binding InputTrayVM}"
                         Grid.Column="0"
                         Grid.Row="1"/>
         <ContentControl Content="{Binding OutputTrayVM}"
                         Grid.Column="1"
                         Grid.Row="1"/>
+        <controls:LogDisplayer LogSource="{Binding Notification, Source={x:Static logging:UILog.Appender}}"
+                               Grid.Row="2"
+                               Grid.ColumnSpan="2"/>
+
+        <Grid Grid.Column="2"
+              Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.3*"/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Button Content="Cylinder 1 UP"
+                    Background="Gray"
+                    Command="{Binding}"
+                    Grid.Column="0"
+                    Grid.Row="0">
+            </Button>
+
+            <Button Content="Cylinder 2 UP"
+                    Background="Gray"
+                    Command="{Binding}"
+                    Grid.Column="1"
+                    Grid.Row="0">
+            </Button>
+            
+            <Button Content="HOME"
+                    Background="Yellow"
+                    Grid.Column="0"
+                    Grid.Row="1"
+                    Command="{Binding}"/>
+            
+            <Button Content="CHANGE"
+                    Background="Gray"
+                    Grid.Column="1"
+                    Grid.Row="1"
+                    Command="{Binding}"/>
+            
+            <Button Content="START"
+                    Background="Green"
+                    Grid.Column="1"
+                    Grid.Row="2"
+                    Command="{Binding}"/>
+            
+            <Button Content="STOP"
+                    Background="Red"
+                    Grid.Column="0"
+                    Grid.Row="2"
+                    Command="{Binding}"/>
+        </Grid>
     </Grid>
 </UserControl>
